Closed
Bug 1416618
Opened 8 years ago
Closed 8 years ago
Cannot show short date format (yy/MM/dd'('ddd')') correctly
Categories
(Core :: Internationalization, defect, P3)
Tracking
()
VERIFIED
FIXED
mozilla59
People
(Reporter: m_kato, Assigned: m_kato)
Details
Attachments
(2 files)
|
47.03 KB,
image/png
|
Details | |
|
59 bytes,
text/x-review-board-request
|
jfkthame
:
review+
gchang
:
approval-mozilla-beta+
|
Details |
When format is Japanese on [Region and Language] - [Formats] of Control Panel, it has (yy/MM/dd'('ddd')' for 17/11/13(月) (ddd is short weekly name).
But format shows ddd as date like 17/11/13(013).
| Assignee | ||
Comment 1•8 years ago
|
||
| Assignee | ||
Updated•8 years ago
|
Priority: -- → P3
| Assignee | ||
Updated•8 years ago
|
Summary: Cannot show short date format (yy/MM/dd'('ddd')' correctly → Cannot show short date format (yy/MM/dd'('ddd')') correctly
| Assignee | ||
Updated•8 years ago
|
Assignee: nobody → m_kato
| Assignee | ||
Updated•8 years ago
|
status-firefox57:
--- → wontfix
| Assignee | ||
Comment 2•8 years ago
|
||
| Comment hidden (mozreview-request) |
Comment 4•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8928049 [details]
Bug 1416618 - Cannot show short date format (yy/MM/dd'('ddd')') correctly.
https://reviewboard.mozilla.org/r/199278/#review204436
Oops! We should probably consider this for uplift to 58.
Attachment #8928049 -
Flags: review?(jfkthame) → review+
Pushed by m_kato@ga2.so-net.ne.jp:
https://hg.mozilla.org/integration/autoland/rev/26b0f3f9fca1
Cannot show short date format (yy/MM/dd'('ddd')') correctly. r=jfkthame
Comment 6•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox59:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
| Assignee | ||
Comment 7•8 years ago
|
||
Comment on attachment 8928049 [details]
Bug 1416618 - Cannot show short date format (yy/MM/dd'('ddd')') correctly.
Approval Request Comment
[Feature/Bug causing the regression]:
bug 1301640 and bug 1308329
[User impact if declined]:
When user selects short data format like yy/MM/dd'('ddd')' on OS's preference, "ddd" shows day unfortunately. Correct should be short name of a day of week. This occurs on file:/// and etc.
[Is this code covered by automated tests?]:
No
[Has the fix been verified in Nightly?]:
Yes
[Needs manual test from QE? If yes, steps to reproduce]:
Yes if possible.
- Step
1. Open [Control Panel]
2. [Clock, Language, and Region] - [Region and Language] - [Formats]
3. Select Format: to "Japanese (Japan)" and Short date: yy/MM/dd'('ddd')', then apply [OK]
4. Launch Firefox
5. Navigate to file:///c:/
- Expected result
Date format of each file is like 17/11/16 (Thr), not 17/11/16 (016)
[List of other uplifts needed for the feature/fix]:
Nothing
[Is the change risky?]:
Low
[Why is the change risky/not risky?]:
Set correct iterator to search string.
[String changes made/needed]:
N/A
Attachment #8928049 -
Flags: approval-mozilla-beta?
Comment 8•8 years ago
|
||
Hi Brindusa, could you help find someone to verify if this issue was fixed as expected on the latest Nightly build? Thanks!
Flags: needinfo?(brindusa.tot)
Comment 9•8 years ago
|
||
Build ID: 20171116100106
User Agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:59.0) Gecko/20100101 Firefox/59.0
Verified as fixed on Firefox Nightly 59.0a1 on Windows 7 x 64.
I couldn't verify it on Windows 10 because I couldn't find short date format like the one indicated above (yy/MM/dd'('ddd')).
Updated•8 years ago
|
Flags: needinfo?(brindusa.tot)
Comment 10•8 years ago
|
||
Comment on attachment 8928049 [details]
Bug 1416618 - Cannot show short date format (yy/MM/dd'('ddd')') correctly.
Fix the date format and was verified. Beta58+.
Attachment #8928049 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 11•8 years ago
|
||
| bugherder uplift | ||
Updated•8 years ago
|
Flags: qe-verify+
Comment 12•8 years ago
|
||
Build ID: 20171120142222
User Agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:59.0) Gecko/20100101 Firefox/58.0
Verified as fixed on Firefox 58.0b5 on Windows 7 x 64.
You need to log in
before you can comment on or make changes to this bug.
Description
•