Bug 1416618 - Cannot show short date format (yy/MM/dd'('ddd')') correctly. r=jfkthame

On Windows 7, there is yy/mm/dd'('ddd')' as short date format of Japanese.
When selecting this, ddd isn't converted to day of the week correctly.

FindInReadable will update start position iterator even if not found. So when
using FindInReadable again, we have to reset start position iterator.

MozReview-Commit-ID: AoS1Txq3Twc