intl/locale/windows/OSPreferences_win.cpp
@@ -176,8 +176,11 @@ OSPreferences::ReadDateTimePattern(DateTimeFormatStyle aDateStyle,
     str->EndReading(end);
     if (FindInReadable(NS_LITERAL_STRING("dddd"), pos, end)) {
       str->ReplaceLiteral(pos - start, 4, u"EEEE");
-    } else if (FindInReadable(NS_LITERAL_STRING("ddd"), pos, end)) {
-      str->ReplaceLiteral(pos - start, 3, u"EEE");
+    } else {
+      pos = start;
+      if (FindInReadable(NS_LITERAL_STRING("ddd"), pos, end)) {
+        str->ReplaceLiteral(pos - start, 3, u"EEE");
+      }
     }
 
     // Also, Windows uses lowercase "g" or "gg" for era, but ICU wants uppercase "G"
